--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -5,4 +5,5 @@
     <string name="contact">聯係人</string>
     <string name="me">我</string>
     <string name="message">消息</string>
+    <string name="login">登錄</string>
 </resources>
