--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -5,4 +5,5 @@
     <string name="contact">contact</string>
     <string name="me">me</string>
     <string name="message">message</string>
+    <string name="login">login</string>
 </resources>
