--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="contact">contact</string>
     <string name="me">me</string>
     <string name="message">message</string>
+    <string name="login">login</string>
 </resources>
