--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -6,4 +6,6 @@
     <string name="me">me</string>
     <string name="message">message</string>
     <string name="login">login</string>
+    <string name="username">username</string>
+    <string name="password">password</string>
 </resources>
