--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -6,4 +6,6 @@
     <string name="me">我</string>
     <string name="message">消息</string>
     <string name="login">登錄</string>
+    <string name="username">用戶名</string>
+    <string name="password">密碼</string>
 </resources>
