--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -6,4 +6,6 @@
     <string name="me">我</string>
     <string name="message">消息</string>
     <string name="login">登录</string>
+    <string name="username">用户名</string>
+    <string name="password">密码</string>
 </resources>
